# sharknado

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: 01_tutorial.md  02_contribua.md  index.md
docs/api/: previsao.md
docs/template/: instalacao.md
docs/todos/: apitodo.md
sharknado/: __init__.py  __main__.py  cli.py  previsao.py  previsao_bak.py
sharknado/hist/: cities_weather_req.csv  previsao_dias.csv  previsao_hoje.csv
tests/: __init__.py  test_cli.py  test_previsao.py
