[tool.poetry]
name = "sharknado"
version = "0.1.1"
description = ""
authors = ["K Maximo", "Ravi S."]
readme = "README.md"
classifiers = [
    "Topic :: Education",
    "Environment :: Console",
    "Natural Language :: Portuguese (Brazilian)",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.urls]
"Documentação" = "https://sharknado_weather.readthedocs.io/en/latest/"
"Código" = "https://github.com/kmaximo/sharknado_weather"
"Bug Tracker" = "https://github.com/kmaximo/sharknado_weather/issues"


[tool.poetry.scripts] 
sharknado = "sharknado.cli:app"


[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.5.2"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
taskipy = "^1.12.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
python-decouple = "^3.8"
plotly = "^5.16.1"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.21"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.2.1"
mkdocs-macros-plugin = "^1.0.4"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=sharknado -vv"
post_test = "coverage html"
